--- a/Team.html
+++ b/Team.html
@@ -498,32 +498,27 @@
 
 
 
-
-
-
-
-
-
-<!--div class="row">
+<div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">ROLL CAGE</font>
+     <font face="arial" size="4" color="#1565c0"> ROLLCAGE</font>
         </div>
       </div>
-   <div clas="row center">
-     <div class="col s5">
-       </div>
+   <div class="row center">
+  <div class="col s5">
+  </div>
+
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/17.jpg" height="50%">
+      <img src="pic/3.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Pooja Chouhan </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8003825125</font></font></center></p>
 
         </div>
    </div>
+
 
 
    <div class="row center">
@@ -534,11 +529,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/20.jpg" height="50%">
+      <img src="pic/23.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Pranav Maheshwari
- </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Divyanshu Goyal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -549,10 +543,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/21.jpg" height="50%">
+      <img src="pic/5.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Poojan Gajjar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Gautam Jain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -562,17 +556,14 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/22.jpg" height="50%">
+      <img src="pic/6.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b> Preshit Ameta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Sudhir Kumar Kushwaha </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
-      </div-->
-
-
-
+      </div>
 
 
 
@@ -597,7 +588,7 @@
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak
- </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-9167151532</font></font></center></p>
+ </b><br><font color="#1565c0" size="3">&nbsp Head</font><br><font size="3">+91-8130807788</font></font></center></p>
 
         </div>
    </div>
