--- a/Team.html
+++ b/Team.html
@@ -324,7 +324,7 @@
       <img src="pic/9.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Mukul Bansal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp  Rishabh Shukla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -338,7 +338,7 @@
       <img src="pic/10.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Parvesh Saini </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -351,12 +351,56 @@
       <img src="pic/12.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Subham Das </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Kain Dipendrasingh </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
       </div>
+    <div class="col s1">
+        </div>
 
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/12.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>Hritu Raj </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+      </div>
+      <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/12.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+      </div>
+      <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/12.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>Vanka Manikanta Datta Sai </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+      </div>
 
 
 
@@ -402,7 +446,7 @@
       <img src="pic/14.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Ankit Mangal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp  Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -416,7 +460,7 @@
       <img src="pic/15.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Mukesh Sharma </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -429,7 +473,7 @@
       <img src="pic/16.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Nitesh Rai </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
