--- a/Team.html
+++ b/Team.html
@@ -358,6 +358,51 @@
       </div>
 
 
+   <div class="row center">
+
+
+         <div class="col s1">
+        </div>
+         <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/9.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp  Hritu Raj </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+        <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/10.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+    <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="pic/12.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>Manikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+
+      </div>
+
+
 
 
 
