--- a/Team.html
+++ b/Team.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col s12 left">
           <h5><font face="Arial"><b>Team</b></font></h5>
-     <font face="arial" size="4" color="#1565c0" align="center">FACULTY MEMBERS</font>
+     <!--font face="arial" size="4" color="#1565c0" align="center">FACULTY MEMBERS</font>
         </div>
       </div>
 
@@ -125,7 +125,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Dr. Anand K. Plappally </b><br><font color="#1565c0" size="3">&nbspAssistant Professor</font><br><font size="3">0291-2449092</font></font></center></p>
 
         </div>
-      </div>
+      </div-->
 
 
 
