--- a/Team.html
+++ b/Team.html
@@ -94,7 +94,7 @@
       </div>
 
 
-
+<!--Faculty members heading and two professors-->
 
 
 
@@ -255,10 +255,10 @@
 
 
 
+<!--Vehicle Dynamics Heading -->
 
 
-
-<div class="row">
+<!--div class="row">
         <div class="col s12 left">
 
      <font face="arial" size="4" color="#1565c0">VEHICLE DYNAMICS</font>
@@ -277,7 +277,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Vivek Kumar Singh  </b><br><font color="#1565c0" size="3">&nbspVehicle Dynamics Head</font><br><font size="3"></font></font></center></p>
 
         </div>
-   </div>
+   </div-->
 
 
 
