--- a/Team.html
+++ b/Team.html
@@ -89,12 +89,13 @@
       <div class="row">
         <div class="col s12 left">
           <h5><font face="Arial"><b>Team</b></font></h5>
+          <!--Faculty members heading and two professors-->
      <!--font face="arial" size="4" color="#1565c0" align="center">FACULTY MEMBERS</font>
         </div>
       </div>
 
 
-<!--Faculty members heading and two professors-->
+
 
 
 
@@ -185,7 +186,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0"> PROCUREMENT</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -292,7 +293,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">SUSPENSION & STEERING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspSUSPENSION & STEERING</font>
         </div>
       </div>
    <div class="row center">
@@ -413,7 +414,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">BRAKING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
       </div>
    <div class="row center">
@@ -492,7 +493,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">TRANSMISSION</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspTRANSMISSION</font>
         </div>
       </div>
    <div class="row center">
@@ -544,7 +545,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0"> ROLLCAGE</font>
+     <font face="arial" size="4" color="#1565c0"> &nbsp&nbsp&nbspROLLCAGE</font>
         </div>
       </div>
    <div class="row center">
@@ -617,7 +618,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">MARKETING</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspMARKETING</font>
         </div>
       </div>
    <div class="row center">
@@ -696,7 +697,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">WEB DESIGNER</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspWEB DESIGNER</font>
         </div>
       </div>
    <div class="row center">
