--- a/Team.html
+++ b/Team.html
@@ -162,7 +162,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/2.jpg" height="50%">
+      <img src="ANKIT.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mangal </b><br><font color="#1565c0" size="3">&nbspVice-Captain</font><br><font size="3">+91-9131515092</font></font></center></p>
