--- a/Team.html
+++ b/Team.html
@@ -443,7 +443,7 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/14.jpg" height="50%">
+      <img src="SUMIT.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp  Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -457,7 +457,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/15.jpg" height="50%">
+      <img src="NAVDEEP.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -470,7 +470,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/16.jpg" height="50%">
+      <img src="ANI.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
