--- a/Team.html
+++ b/Team.html
@@ -196,7 +196,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/3.jpg" height="50%">
+      <img src="AJAY.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Ajay Kumar </b><br><font color="#1565c0" size="3">&nbsp Vice-Captain</font><br><font size="3">+91-8395035486</font></font></center></p>
@@ -303,7 +303,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/8.jpg" height="50%">
+      <img src="ABHIJEET.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Abhijeet Sutar
@@ -322,10 +322,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/9.jpg" height="50%">
+      <img src="ARZOO.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Rishabh Shukla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -336,10 +336,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/10.jpg" height="50%">
+      <img src="MANIKANTA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbspManikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -349,7 +349,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/12.jpg" height="50%">
+      <img src="DIPENDRA.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>Kain Dipendrasingh </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -367,7 +367,7 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/9.jpg" height="50%">
+      <img src="HRITURAJ.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp  Hritu Raj </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -381,7 +381,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/10.jpg" height="50%">
+      <img src="BHARAT.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Bharath Nalla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -397,7 +397,7 @@
       <img src="pic/12.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Manikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Rishabh Shukla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -443,10 +443,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="SUMIT.jpg" height="50%">
+      <img src="ANI.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp  Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbspAni Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -457,10 +457,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="NAVDEEP.jpg" height="50%">
+      <img src="SUMIT.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -470,10 +470,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="ANI.jpg" height="50%">
+      <img src="NAVDEEP.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -628,7 +628,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/4.jpg" height="50%">
+      <img src="MAYANK.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Mayank Tak
@@ -707,7 +707,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/27.jpg" height="50%">
+      <img src="AMAN.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Aman Kumar  </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
