--- a/Team.html
+++ b/Team.html
@@ -503,7 +503,7 @@
   <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/17.jpg" height="50%">
+      <img src="ROHAN.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Rohan Shisode
