--- a/Team.html
+++ b/Team.html
@@ -336,7 +336,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="MANIKANTA.jpg" height="50%">
+      <img src="SAI.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbspManikanta </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
