--- a/Team.html
+++ b/Team.html
@@ -214,10 +214,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/23.jpg" height="50%">
+      <img src="NAVDEEP.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Divyanshu Goyal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Navdeep Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -228,28 +228,46 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/5.jpg" height="50%">
+      <img src="ANKIT MITTAL.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Gautam Jain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
         </div>
 
 
-        <div class="col s3">
+<div class="row center">
+
+
+         <div class="col s1">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/6.jpg" height="50%">
+      <img src="ARZOO.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Sudhir Kumar Kushwaha </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arzoo Qureshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
-      </div>
+        <div class="col s1">
+        </div>
 
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="SUMIT.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Sumit Bain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+    <div class="col s1">
+        </div>
 
 
 
@@ -517,10 +535,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/18.jpg" height="50%">
+      <img src="HEMAN.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Nitish Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Heman </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -531,10 +549,20 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/19.jpg" height="50%">
+      <img src="CHAITANYA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Ashutosh Pathak </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Chaitanya Bagul </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+      </div>
+          <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ATUL.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Atul Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
       </div>
@@ -573,10 +601,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/23.jpg" height="50%">
+      <img src="AMAN.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Divyanshu Goyal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Aman Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -587,10 +615,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/5.jpg" height="50%">
+      <img src="ANKIT MITTAL.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Gautam Jain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
@@ -600,10 +628,10 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/6.jpg" height="50%">
+      <img src="ARVIND.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Sudhir Kumar Kushwaha </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Arvind Chandrakar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -647,10 +675,10 @@
          <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/24.jpg" height="50%">
+      <img src="ANI.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Parth Joshi </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Ani Agrawal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -661,27 +689,47 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/25.jpg" height="50%">
+      <img src="RISHABH.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Vishal Jain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
     <div class="col s1">
         </div>
 
 
-        <div class="col s3">
+<div class="row center">
+
+
+         <div class="col s1">
+        </div>
+         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/26.jpg" height="50%">
+      <img src="DIPENDRA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Sachin Beejawat </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp Dipendra Kain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
-      </div>
+        <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
+  <div class="card">
+    <div class="card-image "  >
+      <img src="ARVIND.jpg" height="50%">
+    </div>
+  </div>
+  <p><center><font face="Arial" size="4"><b>&nbsp Arvind Chandrakar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+
+        </div>
+    <div class="col s1">
+        </div>
+
 
 
 
