--- a/Team.html
+++ b/Team.html
@@ -412,7 +412,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="pic/12.jpg" height="50%">
+      <img src="RISHABH.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>Rishabh Shukla </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
@@ -430,7 +430,7 @@
 
 
 <div class="row">
-        <div class="col s12 left">
+        <div class="col s1 left">
 
      <font face="arial" size="4" color="#1565c0">&nbsp&nbsp&nbspBRAKING</font>
         </div>
