--- a/Team.html
+++ b/Team.html
@@ -530,7 +530,7 @@
         </div>
    </div>
    <div class="row center">
-         <div class="col s2">
+         <div class="col s1">
         </div>
          <div class="col s3">
   <div class="card">
@@ -542,7 +542,7 @@
 
         </div>
 
-        <div class="col s2">
+        <div class="col s1">
         </div>
 
 
@@ -556,10 +556,14 @@
 
         </div>
       </div>
-          <div class="col s3">
+             <div class="col s1">
+        </div>
+
+
+        <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="ATUL.jpg" height="50%">
+      <img src="CHAITANYA.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Atul Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
