--- a/Team.html
+++ b/Team.html
@@ -370,7 +370,7 @@
       <img src="DIPENDRA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>Kain Dipendrasingh </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Dipendra Kain </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -563,7 +563,7 @@
         <div class="col s3">
   <div class="card">
     <div class="card-image "  >
-      <img src="CHAITANYA.jpg" height="50%">
+      <img src="ATUL.jpg" height="50%">
     </div>
   </div>
   <p><center><font face="Arial" size="4"><b>&nbsp Atul Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
