--- a/Team.html
+++ b/Team.html
@@ -186,7 +186,7 @@
 <div class="row">
         <div class="col s12 left">
 
-     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp PROCUREMENT</font>
+     <font face="arial" size="4" color="#1565c0">&nbsp&nbsp MANUFACTURING AND PROCUREMENT</font>
         </div>
       </div>
    <div class="row center">
@@ -211,7 +211,7 @@
 
          <div class="col s1">
         </div>
-         <div class="col s3">
+         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
       <img src="NAVDEEP.jpg" height="50%">
@@ -225,7 +225,7 @@
         </div>
 
 
-        <div class="col s3">
+        <div class="col s2">
   <div class="card">
     <div class="card-image "  >
       <img src="ANKIT MITTAL.jpg" height="50%">
@@ -234,8 +234,6 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Ankit Mittal </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1">
-        </div>
 
 
 <!--div class="row center"-->
@@ -243,7 +241,7 @@
 
          <div class="col s1">
         </div>
-         <div class="col s3">
+         <div class="col s2">
   <div class="card">
     <div class="card-image "  >
       <img src="ARZOO.jpg" height="50%">
@@ -257,7 +255,7 @@
         </div>
 
 
-        <div class="col s3">
+        <div class="col s2">
   <div class="card">
     <div class="card-image "  >
       <img src="SUMIT.jpg" height="50%">
@@ -529,7 +527,9 @@
 
         </div>
    </div>
-   <div class="row center">
+    <div class="row center">
+
+
          <div class="col s1">
         </div>
          <div class="col s3">
@@ -538,7 +538,7 @@
       <img src="HEMAN.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Heman </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp HEMAN </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
 
@@ -552,11 +552,10 @@
       <img src="CHAITANYA.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Chaitanya Bagul </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>&nbsp CHAITANYA BAGUL </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-      </div>
-             <div class="col s1">
+    <div class="col s1">
         </div>
 
 
@@ -566,9 +565,10 @@
       <img src="ATUL.jpg" height="50%">
     </div>
   </div>
-  <p><center><font face="Arial" size="4"><b>&nbsp Atul Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
+  <p><center><font face="Arial" size="4"><b>Atul Kumar </b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
+
       </div>
 
 
@@ -699,8 +699,7 @@
   <p><center><font face="Arial" size="4"><b>&nbsp Rishabh Shukla</b><br><font color="#1565c0" size="3">&nbsp</font><br><font size="3"></font></font></center></p>
 
         </div>
-    <div class="col s1">
-        </div>
+ 
 
 
          <div class="col s1">
